syntax = "proto3";

package bottle.templates.v2;

import "bottle/templates/v2/typed_attachment.proto";

message TemplatedEmail {
  string template_name = 1;
  string form_variables = 2;
  string email_from = 3;
  string email_to = 4;
  string subject = 5;
  repeated bottle.templates.v2.TypedAttachment attachments = 6;
}
